--- a/services/content-actions-service/src/pyproject.toml
+++ b/services/content-actions-service/src/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "redis>=5.2.1,<6.0.0",
     "async-fastapi-jwt-auth[asymmetric]>=0.6.6,<1.0.0",
     "gunicorn>=23.0.0,<24.0.0",
-    "aiohttp (>=3.11.18,<4.0.0)"
+    "aiohttp (>=3.11.18,<4.0.0)",
+    "motor>=3.7.1,<3.8.0",
+    "beanie>=1.29.0,<2.0.0"
 ]
 
 [project.optional-dependencies]
