--- a/services/content-actions-service/src/Dockerfile.debug
+++ b/services/content-actions-service/src/Dockerfile.debug
@@ -13,25 +13,13 @@ RUN curl -sSL https://install.python-poetry.org | python3 - \
 
 ENV PATH="/root/.local/bin:${PATH}"
 
-COPY services/auth-service/src/pyproject.toml services/auth-service/src/poetry.lock ./
+COPY src/pyproject.toml src/poetry.lock ./
 
-# Копируем auth_utils и собираем на месте
-COPY libs/auth_utils /opt/app/libs/auth_utils
-RUN cd /opt/app/libs/auth_utils && poetry build && cd /opt/app && poetry add libs/auth_utils
+RUN poetry install --only main
+RUN pip install "debugpy"
 
-COPY libs/tracer_utils /opt/app/libs/tracer_utils
-RUN cd /opt/app/libs/tracer_utils && poetry build && cd /opt/app && poetry add libs/tracer_utils
+COPY src/ .
 
-COPY libs/rate_limite_utils /opt/app/libs/rate_limite_utils
-RUN cd /opt/app/libs/rate_limite_utils && poetry build && cd /opt/app && poetry add libs/rate_limite_utils
-
-# RUN poetry install --with dev
-RUN poetry install
-
-COPY services/auth-service/src/ .
-
-# RUN chmod +x ./scripts/entrypoint.sh
 RUN chmod +x ./scripts/entrypoint_debug.sh
 
-# CMD ["./entrypoint_debug.sh"]
 CMD ["./scripts/entrypoint_debug.sh"]
