--- a/services/content-actions-service/src/pyproject.toml
+++ b/services/content-actions-service/src/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "uvicorn>=0.34.1,<1.0.0",
     "python-dotenv>=1.1.0,<2.0.0",
     "pydantic-settings>=2.8.1,<3.0.0",
+    "redis>=5.2.1,<6.0.0",
     "async-fastapi-jwt-auth[asymmetric]>=0.6.6,<1.0.0",
     "gunicorn>=23.0.0,<24.0.0",
     "aiohttp (>=3.11.18,<4.0.0)",
